# billboard-cultural-mood

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: project_config.yaml
data/: billboard_fetcher.py
scripts/: run_sample.sh
src/analysis/: contrast_metrics.py  emotion_classifier.py  sentiment_scorer.py  theme_classifier.py
src/cultural_metrics/: cmi_calculator.py
src/data/: billboard_fetcher.py  lyrics_fetcher.py
src/pipeline/: config_loader.py  schemas.py
src/preprocessing/: chorus_detector.py  text_cleaner.py
src/psychology/: jungian_scorer.py
src/utils/: config_loader.py  identifiers.py
src/visualizations/: _design_system.py  report_builder.py  trend_charts.py
tests/: conftest.py  test_cmi_calculator.py  test_contrast_metrics.py  test_emotion_classifier.py  test_failure_simulation.py  test_integration.py  test_jungian_scorer.py  test_sentiment_scorer.py  test_theme_classifier.py  test_trend_charts.py
