[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "billboard-cultural-mood"
version         = "1.0.0"
description     = "AI-driven cultural mood analysis of Billboard Hot 100 (1958-present)"
requires-python = ">=3.11"
readme          = "README.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit   = ["tests/*"]

[tool.black]
line-length    = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
